# s3si.ts

./: .dockerignore  .gitignore  APIError.ts  Agents.md  CHANGELOG  CHANGELOG.md  Dockerfile  README.md  app.ts  cache.ts  constant.ts  deno.json  deps.node.ts  deps.ts  dev_deps.ts  gui.ts  gui_deps.ts  iksm.ts  initRank.ts  mgm.json  s3si.ts  splatnet3.ts  state.ts  types.ts  utils.ts  version.ts
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  constant-check.yaml  gui.yaml  pr.yaml  release.yaml
exporter/: file.ts  stat.ink.ts
gui/: .editorconfig  .eslintrc.cjs  .gitignore  README.md  deno.json  deps.ts  dev.ts  fresh.gen.ts  gui.ts  index.html  ipc.ts  main.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.ts  tailwind.config.cjs  vite.config.ts  worker.ts
gui/islands/: RedirectLogin.tsx
gui/routes/: index.tsx  login.tsx  login_callback.tsx
gui/routes/api/: login_iksm.ts
gui/scripts/: build-npm.ts  compile.sh  deno.json  enable-updater.ts  i18n-backend.ts  make-update.ts
gui/src/: App.tsx  main.css  main.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
gui/src/components/: CheckUpdate.tsx  Checkbox.tsx  ErrorContent.tsx  Header.tsx  Layout.tsx  Loading.tsx  OpenSplatnet.tsx  RunPanel.tsx
gui/src/constant/: index.ts
gui/src/context/: app.tsx
gui/src/hooks/: usePromise.ts  useShowWindow.ts  useSubField.ts  useWindowSize.ts
gui/src/i18n/: config.ts
gui/src/ipc/: index.ts  stdio.ts  types.ts
gui/src/jsonrpc/: client.ts  index.ts  stdio.ts  types.ts
gui/src/pages/: Guide.tsx  Home.tsx  RedirectLogin.tsx  Settings.tsx
gui/src/services/: config.ts  s3si.ts  s3si.tsx  useService.ts
gui/src/store/: app.ts
gui/src/utils/: composeLoadable.ts  sleep.ts
scripts/: build-npm.ts  compile.ts  delete-coop.ts  delete.ts  export-file-to-stat-ink.ts  export-geardata.ts  find-coop-map.ts  find-id.ts  generate-code.ts  generate-gear-map.ts  test-schema.ts  update-constant.ts
src/: GameFetcher.ts  RankTracker.test.ts  RankTracker.ts  VersionData.test.ts  VersionData.ts  app.ts  cache.ts  constant.ts  daemon.ts  env.ts  iksm.ts  lib.ts  splatnet3.ts  state.test.ts  state.ts  types.ts  utils.test.ts  utils.ts
src/assets/: gear-map.json
src/dict/: stat.ink.ts
src/env/: mod.ts  runtime.ts
src/exporters/: file.ts  splashcat-types.ts  splashcat.ts  stat.ink.ts
src/ipc/: channel.ts  mod.ts  stdio.ts  types.ts
src/jsonrpc/: channel.ts  client.ts  deno.ts  jsonrpc.test.ts  mod.ts  server.ts  types.ts
src/schemas/: mod.ts  splatnet3.jtd.ts  splatnet3.ts
(+3 files in other folders)
