[package]
name = "s3si-ts"
version = "0.1.0"
description = "Export your battles from SplatNet to https://stat.ink"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
  "fs-all",
  "path-all",
  "process-relaunch",
  "shell-execute",
  "shell-open",
  "shell-sidecar",
  "window-all",
] }
serde = { version = "^1.0.196", features = ["derive"] }
serde_json = "^1.0.113"
tokio = { version = "^1.35.1", features = ["time"] }
backtrace = "^0.3.69"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
